--- a/.github/workflows/static-check.yml
+++ b/.github/workflows/static-check.yml
@@ -4,11 +4,22 @@ on: ["push", "pull_request"]
 jobs:
   ci:
     name: "Run CI"
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["windows-latest", "ubuntu-latest", "macOS-latest"]
+        go: ["1.18.x"]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - uses: dominikh/staticcheck-action@v1.1.0
-        with:
-          version: "2021.1.1"
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
+    - uses: WillAbides/setup-go-faster@v1.7.0
+      with:
+        go-version: ${{ matrix.go }}
+    - run: "go test ./..."
+    - run: "go vet ./..."
+    - uses: dominikh/staticcheck-action@v1.2.0
+      with:
+        install-go: false
+        cache-key: ${{ matrix.go }}
